# kable

./: .editorconfig  .gitignore  .sdkmanrc  README.md  build.gradle.kts  gradle.properties  index.html  navigation.html  package-list  renovate.json5  settings.gradle.kts
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: ci.yml  deploy-documentation.yml  documentation.yml  gatt-server-android.yml  gradle-publish.yml  pages.yml  publish.yml  publishDocumentation.yml  release-drafter.yml  sensortag-android.yml  sensortag-ios.yml  sensortag-web.yml  signing.yml  snapshot.yml  version-labels.yml
bluetooth-sig-assigned-numbers/: build.gradle.kts
bluetooth-sig-assigned-numbers/api/: bluetooth-sig-assigned-numbers.api
core/: build.gradle.kts  gradle.properties  index.html  navigation.html
core/api/: core.api
core/com.juul.kable/: -options.html  -scanner.html  broadcast-receiver-flow.html  broadcast.html  characteristic-of.html  descriptor-of.html  extended-properties.html  index.html  indicate.html  notify.html  peripheral.html  read.html  (+5 more)
core/com.juul.kable.logs/: -hex.html  index.html
exceptions/: build.gradle.kts  gradle.properties  index.html  navigation.html
gradle/: libs.versions.toml
kable-btleplug-ffi/: Cargo.toml  Cross.toml  build.gradle.kts  uniffi.toml
kable-btleplug-ffi/src/: cancellation_handle.rs  characteristic.rs  descriptor.rs  error.rs  lib.rs  peripheral.rs  peripheral_id.rs  peripheral_properties.rs  scan.rs  service.rs  uuid.rs  write_type.rs
kable-btleplug-ffi/src/commonMain/rust/: lib.rs  scan.rs
kable-core/: build.gradle.kts  consumer-rules.pro
kable-default-permissions/: build.gradle.kts
kable-exceptions/: build.gradle.kts
kable-log-engine-khronicle/: build.gradle.kts
kable-server/: build.gradle.kts
log-engine-khronicle/: build.gradle.kts  gradle.properties  index.html  navigation.html
log-engine-tuulbox/: build.gradle.kts  gradle.properties  index.html  navigation.html
scripts/: pages.json  sourceset_dependencies.js
uniffi-plugin/: build.gradle.kts  settings.gradle.kts
(+1172 files in other folders)
