[package]
name = "btleplug-ffi"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
btleplug = { version = "0.11.8", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.14"
uniffi = { version = "0.29.1", features = ["tokio"] }
uuid = "1.16.0"

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
